# texas-result-scraper

./: .gitattributes  .gitignore  pyproject.toml
.github/workflows/: flat.yml  release.yaml
texas_result_scraper/: flat_file.py  funcs.py  main.py  model_groups.py  p2024_results.db  result_bases.py  result_db.py  result_db_models.py  result_funcs.py  result_models.py  result_public_models.py  result_validator.py  scraper.py  texas_results_urls.toml  validator.py
texas_result_scraper/data/: multiindex.csv  texas-election-1009.json  tx-49664-1009-county-results.csv  tx-49664-1009-race-results.csv  tx-49664-1009-statewide-results.csv  tx-49664-1009.json  tx-49664-1010-county-results.csv  tx-49664-1010-statewide-results.csv  tx-49664-1012-county-results.csv  tx-49664-1012-race-results.csv  tx-49664-1012-statewide-results.csv
texas_result_scraper/funcs/: result_funcs
texas_result_scraper/model_schemas/: county_json.json  county_json.py
texas_result_scraper/models/: bases.py  db_models.py  public_models.py  result_models
texas_result_scraper/utils/: __init__.py
texas_result_scraper/validators/: result_validator
