[tool.poetry]
name = "texas-result-scraper"
version = "0.1.0"
description = ""
authors = ["jreakin <johnreakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pydantic = "^2.9.2"
sqlmodel = "0.0.21"
beautifulsoup4 = "^4.12.3"
icecream = "^2.1.3"
election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true}
state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles", develop = true}
cfscrape = {path = "/Users/johneakin/cloudflare-scrape"}
nameparser = "^1.1.3"
pydantic-custom-types = "^0.2.2"
psycopg2 = "^2.9.10"

[tool.poetry.dev-dependencies]
election_utils = { path = "/Users/johneakin/PyCharmProjects/election-utils", develop = true}
state_voterfiles = { path = "/Users/johneakin/PyCharmProjects/state-voterfiles", develop = true}
cfscrape = {path = "/Users/johneakin/cloudflare-scrape"}

# Git dependencies for production
[tool.poetry.dependencies.election_utils]
git = "https://github.com/jreakin/jre-election-utils.git"

[tool.poetry.dependencies.state_voterfiles]
git = "https://github.com/Abstract-Data/state-voterfiles.git"

[tool.poetry.dependencies.cfscrape]
git = "https://github.com/Anorov/cloudflare-scrape.git"

[tool.poetry.extras]
prod = ["election_utils", "state_voterfiles", "cfscrape"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
